--- a/index.html
+++ b/index.html
@@ -19,22 +19,17 @@
             line-height: 1.6;
             color: #333;
             background-color: #f4f4f9;
-            font-size: 1rem;
         }
 
         header {
             background: #007bff;
             color: white;
             text-align: center;
-            padding: 1rem;
+            padding: 1rem 0.5rem;
         }
 
         header h1 {
-            font-size: 1.8rem;
-        }
-
-        header h2 {
-            font-size: 1rem;
+            font-size: 2rem;
         }
 
         .link-whatsapp {
@@ -53,25 +48,19 @@
             background: #1b9e4d;
         }
 
-        .link-whatsapp img {
-            width: 20px;
-            height: 20px;
-            margin-right: 8px;
-        }
-
         main {
             max-width: 1200px;
-            margin: 1rem auto;
+            margin: 2rem auto;
             padding: 0 1rem;
         }
 
         .imagens {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 1rem;
         }
 
-        .imagens img {
+        .imagem img {
             width: 100%;
             height: auto;
             border-radius: 8px;
@@ -80,14 +69,14 @@
 
         .call-to-action {
             text-align: center;
-            margin: 1.5rem 0;
+            margin: 2rem 0;
         }
 
         .call-to-action button {
             background: #007bff;
             color: white;
             border: none;
-            padding: 0.8rem 1.5rem;
+            padding: 1rem 2rem;
             font-size: 1rem;
             border-radius: 5px;
             cursor: pointer;
@@ -99,59 +88,12 @@
         }
 
         #formularioContato {
-            max-width: 90%;
-            margin: 1.5rem auto;
+            max-width: 600px;
+            margin: 2rem auto;
             background: white;
-            padding: 1.5rem;
+            padding: 1rem;
             border-radius: 8px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-            display: none;
-        }
-
-        #formularioContato h3 {
-            text-align: center;
-            margin-bottom: 1rem;
-            font-size: 1.5rem;
-        }
-
-        #formularioContato form {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-        }
-
-        #formularioContato label {
-            font-size: 1rem;
-            font-weight: bold;
-            color: #555;
-        }
-
-        #formularioContato input,
-        #formularioContato textarea {
-            width: 100%;
-            padding: 0.8rem;
-            font-size: 1rem;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        #formularioContato textarea {
-            resize: none;
-        }
-
-        #formularioContato button {
-            background: #007bff;
-            color: white;
-            border: none;
-            padding: 0.8rem;
-            font-size: 1rem;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background 0.3s ease;
-        }
-
-        #formularioContato button:hover {
-            background: #0056b3;
         }
 
         footer {
@@ -161,92 +103,56 @@
             padding: 1rem;
         }
 
-        .paragrafo-extenso {
-            font-size: 0.85rem;
-            line-height: 1.4;
-            margin: 0.5rem 0;
+        /* Carta de Apresentação */
+        #cartaApresentacao {
+            width: 100%;
+            padding: 1rem;
+            margin-top: 2rem;
+            background-color: #f9f9f9;
+            border-radius: 8px;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+            display: block;
+            opacity: 1;
+            transition: all 0.3s ease-in-out;
         }
 
-        /* Responsividade */
+        #cartaApresentacao h2 {
+            font-size: 1.4rem;
+            color: #333;
+        }
+
+        #cartaApresentacao p {
+            font-size: 1rem;
+            color: #555;
+            line-height: 1.5;
+        }
+
         @media (max-width: 768px) {
-            header h1 {
-                font-size: 1.5rem;
+            #cartaApresentacao {
+                padding: 0.8rem;
+                margin-top: 1rem;
             }
 
-            header h2 {
-                font-size: 0.9rem;
-            }
-
-            .link-whatsapp {
-                font-size: 0.9rem;
-                padding: 0.4rem 0.8rem;
-            }
-
-            .call-to-action button {
-                font-size: 0.9rem;
-                padding: 0.6rem 1rem;
-            }
-
-            #formularioContato {
-                padding: 1rem;
-            }
-
-            #formularioContato h3 {
+            #cartaApresentacao h2 {
                 font-size: 1.2rem;
             }
 
-            footer {
-                font-size: 0.8rem;
-                padding: 0.8rem;
-            }
-
-            .paragrafo-extenso {
-                font-size: 0.75rem;
+            #cartaApresentacao p {
+                font-size: 0.9rem;
             }
         }
 
         @media (max-width: 480px) {
-            header h1 {
-                font-size: 1.3rem;
-            }
-
-            header h2 {
-                font-size: 0.8rem;
-            }
-
-            .link-whatsapp {
-                font-size: 0.8rem;
-                padding: 0.3rem 0.6rem;
-            }
-
-            .call-to-action button {
-                font-size: 0.8rem;
-                padding: 0.5rem 0.8rem;
-            }
-
-            #formularioContato {
-                padding: 0.8rem;
-            }
-
-            #formularioContato h3 {
-                font-size: 1rem;
-            }
-
-            #formularioContato input,
-            #formularioContato textarea {
-                padding: 0.6rem;
+            #cartaApresentacao {
                 font-size: 0.9rem;
-            }
-
-            footer {
-                font-size: 0.7rem;
                 padding: 0.6rem;
             }
+        }
 
-            .paragrafo-extenso {
-                font-size: 0.7rem;
-                line-height: 1.2;
-            }
+        /* Ajustes de parágrafo */
+        p {
+            margin: 0.10rem 0;
+            padding: 0;
         }
     </style>
 </head>
@@ -256,24 +162,35 @@
         <h1>Miranda Construtora Empreendimento</h1>
         <h2>Excelência em serviços residenciais e comerciais</h2>
         <h3>Contate-nos pelo WhatsApp: (21) 97931-6601 ou (21) 97999-8628</h3>
-        <a href="https://wa.me/5521979316601?text=Quero%20falar%20com%20Jailson%20ou%20Douglas" class="link-whatsapp">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+        <a href="https://wa.me/5521979316601?text=Quero%20falar%20com%20Jailson%20ou%20Douglas" class="link-whatsapp"
+            aria-label="Abrir o WhatsApp para contato">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp"
+                style="width: 30px; height: 30px; margin-right: 10px;">
             Fale Conosco
         </a>
     </header>
+
     <main>
         <section class="imagens">
-            <img src="img/download.jpg" alt="Prédio moderno">
-            <img src="img/faxineira.jpg" alt="Serviços de faxina">
-            <img src="img/imagem.jpg" alt="Edifício corporativo">
-            <img src="img/obras.jpg" alt="Obra em construção">
-            <img src="img/pinturas.jpg" alt="Acabamentos e pinturas">
-          
+            <div class="imagem">
+                <img src="img/download.jpg" alt="Prédio moderno">
+            </div>
+            <div class="imagem">
+                <img src="img/faxineira.jpg" alt="Serviços de faxina">
+            </div>
+            <div class="imagem">
+                <img src="img/imagem.jpg" alt="Edifício corporativo">
+                <img src="img/obras.jpg" alt="sendo construida">
+                <img src="img/pinturas.jpg" alt="acabamentos pinturas">
+                <img src="img/limpeza.jpg" alt="conzinha toda limpa">
+            </div>
         </section>
+
         <section class="call-to-action">
-            <button onclick="mostrarFormulario()">Saiba Mais</button>
+            <button onclick="mostrarFormulario()" aria-label="Exibir formulário de contato">Saiba Mais</button>
         </section>
-        <div id="formularioContato">
+
+        <div id="formularioContato" style="display: none;">
             <h3>Entre em Contato</h3>
             <form id="formContato">
                 <label for="nome">Nome:</label>
@@ -285,18 +202,44 @@
                 <button type="submit">Enviar</button>
             </form>
         </div>
+
+        <!-- Carta de Apresentação -->
+        <section id="cartaApresentacao">
+            <h2>Bem-vindo à Miranda Construtora</h2>
+            <p>Somos especializados em serviços de construção e reforma para residências e empresas. Nossa missão é entregar qualidade e excelência em cada projeto.</p>
+            <p>Entre em contato conosco para saber mais sobre como podemos transformar seu espaço.</p>
+        </section>
     </main>
+
     <footer>
         <p>&copy; 2024 Miranda Construtora Empreendimento</p>
+        <p>Especialistas em limpeza pós-obra e serviços residenciais</p>
+        <p>Prezados Senhores(a), permita-nos apresentar. Somos a MIRANDA CONSTRUTORA LTDA, uma empresa do ramo de construção civil...</p>
     </footer>
+
     <script>
         function mostrarFormulario() {
             const formulario = document.getElementById('formularioContato');
             formulario.style.display = formulario.style.display === 'none' ? 'block' : 'none';
         }
+
+        document.getElementById('formContato').addEventListener('submit', function (event) {
+            event.preventDefault();
+            const nome = document.getElementById('nome').value;
+            const email = document.getElementById('email').value;
+            const mensagem = document.getElementById('mensagem').value;
+
+            if (!nome || !email || !mensagem) {
+                alert('Por favor, preencha todos os campos.');
+                return;
+            }
+
+            alert('Mensagem enviada com sucesso!');
+        });
     </script>
 </body>
 
 </html>
+
 
 
