codigo ajustado para manuteçao

--- a/index.html
+++ b/index.html
@@ -214,7 +214,9 @@
     <footer>
         <p>&copy; 2024 Miranda Construtora Empreendimento</p>
         <p>Especialistas em limpeza pós-obra e serviços residenciais</p>
-        <p>Prezados Senhores(a), permita-nos apresentar. Somos a MIRANDA CONSTRUTORA LTDA, uma empresa do ramo de construção civil...</p>
+        <p>Prezados Senhores(a), permita-nos apresentar. Somos a MIRANDA CONSTRUTORA LTDA, uma empresa do ramo de construção civil
+           fazendo faxina predial e residenciais, limpeza pos obras  
+        </p>
     </footer>
 
     <script>
