projeto alterado por causa da foto

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <img src="img/imagem.jpg" alt="Edifício corporativo">
                 <img src="img/obras.jpg" alt="sendo construida">
                 <img src="img/pinturas.jpg" alt="acabamentos pinturas">
-                <img src="img/limpeza.jpg" alt="conzinha toda limpa">
+                <img src="img/limpeza.jpg.jpg" alt="conzinha toda limpa">
             </div>
         </section>
 
