projetos foi colado mais um item

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <h2>Bem-vindo à Miranda Construtora</h2>
             <p>Somos especializados em serviços de construção e reforma para residências e empresas. Nossa missão é entregar qualidade e excelência em cada projeto.</p>
             <p>Entre em contato conosco para saber mais sobre como podemos transformar seu espaço.</p>
-            <p>hindraulica, ladrilhos e eletricidade</p>
+            <p>hindraulica, ladrilhos e eletrica e alvenaria, pintura etc.</p>
         </section>
     </main>
 
